linked Reset.css properly and created flex for table of content and <section>

--- a/Pages/article-1.html
+++ b/Pages/article-1.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Project1:Manuscript</title>
-		<link href="../reset.css" rel="stylesheet">
+		<link href="../Stylesheets/reset.css" rel="stylesheet">
 		<link href="Stylesheets/article-1.css" rel="Stylesheet">
 		<link rel="stylesheet" href="../Stylesheets/article-1.css">
 
@@ -33,7 +33,6 @@
 			</nav>
 		</header>
 	
-		<article>
 			<div class="article-info">
 				<div class="article-author">
 					<p id="written-by">Written by </p>
@@ -47,6 +46,9 @@
 				</div>
 			</div>
 	
+		<div class="layout">
+
+			<!-- aside -->
 			<aside>
 				<details>
 					<summary>Table of Contents</summary>
@@ -61,19 +63,16 @@
 						</ul>
 						<ul>
 				</details>
-				<blockquote class="quotes">
+				<!-- <blockquote class="quotes">
 					<p> We designers love to fashion ourselves as <em>“problem solvers,”</em> but let’s face it: the line between solving problems and creating them is blurry at best. What problem is being solved by a $1,500 pair of heels, or a $150,000 car, or a $150,000,000 architectural extravaganza in the Bois de Boulogne? The truth is, no matter what designers say, we have never simply answered problems. The act of design vacillates between the functional and the beguiling, often performing one while claiming the other. 
 					</p> 
-				</blockquote>
+				</blockquote> -->
 			</aside>
 
 			<section>
-
-				
-
-			<div class="sticky-header" id="section1"></div>
+				<div class="sticky-header" id="section1"></div>
 					<h2>Emotional > Functional </h2>
-			</div>
+		
 			<p>
 				Le Corbusier dismissed the architecture of his beaux-arts contemporaries as cloying, while he looked longingly to the brutal utility of the grain elevators and factories devised by American engineers. A half century later, Rem Koolhaas jettisoned function in favor of performance: 
 			</p>
@@ -137,13 +136,9 @@
 			<p>
 				While the ascendency of mood boarding reflects the way brands, from commercial products to people, are imagined at this moment, the question remains why we are all so susceptible to manufactured emotion. Why are we so needy? Perhaps this yearning is a reaction to the lurking presence of Big Data. As vast files of meta-data and personal search histories are ferreted away in some server farm in god-knows-where, we crave the kind of anodyne, gauzy experiences that at least promise something warmer and more human. When everything is available all the time and we’re inundated with information in every way, shape and form, we’re left no choice but to favor what makes us feel.
 			</p>
-			</section>
-		</article>
+	</section>
 
-		<section class="link-to-article">
-			<a class="link"href="https://2x4.org/ideas/2015/hooked-on-a-feeling/">Link to article</a>
-		</section>
-		
+	</div>
 		<footer>
 			<p id="citation">Published in T Magazine © Michael Rock</p>
 		</footer>
