--- a/Pages/article-3.html
+++ b/Pages/article-3.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href="../reset.css" rel="stylesheet">
 		<link href="Stylesheets/article-3.css" rel="Stylesheet">
+		<link href="Stylesheets/common.css" rel="Stylesheet">
 		<link rel="Stylesheet" href="../Stylesheets/article-3.css">
 	</head>
 
