--- a/Pages/article-1.html
+++ b/Pages/article-1.html
@@ -2,16 +2,13 @@
 <html>
 	<head>
 		<title>Project1:Manuscript</title>
+
 		<link href="../Stylesheets/reset.css" rel="stylesheet">
-		<link href="Stylesheets/article-1.css" rel="Stylesheet">
 		<link rel="stylesheet" href="../Stylesheets/article-1.css">
+		<link href="../Stylesheets/common.css" rel="stylesheet">
 
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
 
 	</head>
 
@@ -23,7 +20,7 @@
 				<span class="my-name">Vee Mai</span>
 			</div>
 	
-			<h1>Hooked on a <span id="hover-title"><a href="https://www.nicolefenton.com/words-as-material/#:~:text=Using%20words%20as%20material%20along,right%20out%20of%20the%20mud.">Feeling</a></span></h1>
+			<h1>Hooked on a <span id="hover-title">Feeling</span></h1>
 	
 			<nav class="nav-container">
 				<a href="../index.html" class="nav-item">home</a>
@@ -33,36 +30,32 @@
 			</nav>
 		</header>
 	
-			<div class="article-info">
-				<div class="article-author">
-					<p id="written-by">Written by </p>
-					<p id="author-name"><a href="https://www.nicolefenton.com/">
-						Michael Rock</a></p>
-				</div>
-	
-				<div class="original-text">
-					<p id="duration">8 min read </p>
-					<p id="article-link">2015</p>
-				</div>
-			</div>
 	
 		<div class="layout">
 
 			<!-- aside -->
 			<aside>
-				<details>
-					<summary>Table of Contents</summary>
-						<ul>
-							<li><a href="#section1">Emotional > Functional </a></li>
-						</ul>
-						<ul>
-							<li><a href="#section2">How communication works</a></li>
-						</ul>
-						<ul>
-							<li><a href="#section3">How writing fits in</a></li>
-						</ul>
-						<ul>
-				</details>
+					<div class="sticky-aside">
+						<div class="article-info">
+							<div class="article-author">
+								<p id="written-by">Written by </p>
+								<p id="author-name"><a href="https://www.nicolefenton.com/">
+									Michael Rock</a></p>
+							</div>
+				
+							<div class="original-text">
+								<p id="duration">8 min read </p>
+								<p id="article-link">2015</p>
+							</div>
+						</div>
+						<div>
+							<p><strong>Table of Contents</strong>
+								<p><a href="#section1">Emotional > Functional </a></p>
+								<p><a href="#section2">How communication works</a></p>
+								<p><a href="#section3">How writing fits in</a></p>
+							</p>
+						</div>
+					</div>
 				<!-- <blockquote class="quotes">
 					<p> We designers love to fashion ourselves as <em>“problem solvers,”</em> but let’s face it: the line between solving problems and creating them is blurry at best. What problem is being solved by a $1,500 pair of heels, or a $150,000 car, or a $150,000,000 architectural extravaganza in the Bois de Boulogne? The truth is, no matter what designers say, we have never simply answered problems. The act of design vacillates between the functional and the beguiling, often performing one while claiming the other. 
 					</p> 
@@ -137,8 +130,11 @@
 				While the ascendency of mood boarding reflects the way brands, from commercial products to people, are imagined at this moment, the question remains why we are all so susceptible to manufactured emotion. Why are we so needy? Perhaps this yearning is a reaction to the lurking presence of Big Data. As vast files of meta-data and personal search histories are ferreted away in some server farm in god-knows-where, we crave the kind of anodyne, gauzy experiences that at least promise something warmer and more human. When everything is available all the time and we’re inundated with information in every way, shape and form, we’re left no choice but to favor what makes us feel.
 			</p>
 	</section>
-
 	</div>
+
+		<button class="button-one"> Next article </button>
+		<button class="button-one"> Next article </button>
+
 		<footer>
 			<p id="citation">Published in T Magazine © Michael Rock</p>
 		</footer>
