--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 		<title>Project 3-Binding</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<link href="Stylesheets/reset.css" rel="stylesheet">
-		<link href="Stylesheets/common.css" rel="stylesheet">
+		<link href="../Stylesheets/reset.css" rel="stylesheet">
 		<link href="Stylesheets/homepage.css" rel="stylesheet">
 	</head>
 
@@ -19,13 +18,7 @@
 
 			<ul class="right-nav"> 
 				<li>Readings list
-					<ul>
-						<li><a href="Pages/article-1.html" >Article 01</a></li>
-						<li><a href="Pages/article-2.html" >Article 02</a></li>
-						<li><a href="Pages/article-3.html" >Article 03</a></li>
-					</ul>
-				</li>
-			</ul> 
+			</ul>
 		</nav>
 
 		<header>
