kinda finished mobile and desktop

--- a/Pages/article-2.html
+++ b/Pages/article-2.html
@@ -1,34 +1,47 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Article-2</title>
-		<link href="../reset.css" rel="stylesheet">
+		<title>Article02</title>
+		<meta charset="utf-8">
+		 <meta name="viewport" content="width=device-width, initial-scale=1">
+		<link href="../Stylesheets/reset.css" rel="stylesheet">
+		<link href="Stylesheets/common.css" rel="Stylesheet">
 		<link href="../Stylesheets/article-2.css" rel="Stylesheet">
-		<link rel="stylesheet" href="../Stylesheets/article-2.css">
-
+		<link rel="Stylesheet" href="../Stylesheets/article-2.css">
 	</head>
 
 	<body>
 		<header>
-			<nav class="nav">
-				<span class="class-name">PMCD 5002</span>
-				<span class="project">Project 3</span>
+			<div class="header">
+				<span class="class-name">Type & Interaction</span>
+				<span class="project">Article 03</span>
 				<span class="my-name">Vee Mai</span>
-			</nav>
-			
+			</div>
+	
 			<h1>Gradients: the colorful design trend aiming to soothe these anxious times</h1>
-
+	
+			<nav class="nav-container">
+				<a href="../index.html" class="nav-item">home</a>
+				<a href="article-1.html" class="nav-item">Article 1</a>
+				<a href="article-2.html" class="nav-item">Article 2</a>
+				<a href="article-3.html" class="nav-item">Article 3</a>
+			</nav>
+		</header>
+		
+		<article>
 			<div class="article-info">
 				<div class="article-author">
-					<h2 id="written-by">Written by </h2>
-					<h2	id="author-name">Daisy Alioto</h2>
+					<p id="written-by">Written by </p>
+					<p id="author-name"><a href="https://www.nicolefenton.com/">
+						Daisy Alioto</a></p>
 				</div>
+	
 				<div class="original-text">
-					<h2 id="duration">10 min read </h2>
-					<h2 id="article-link">Original text</h2>
+					<p id="duration">10 min read </p>
+					<p id="article-link">March 1,2019</p>
 				</div>
 			</div>
-		</header>
+		
 
 		<article>
 			<section>
