--- a/Pages/article-3.html
+++ b/Pages/article-3.html
@@ -3,10 +3,10 @@
 	<head>
 		<title>Article03</title>
 		<meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-		<link href="../reset.css" rel="stylesheet">
-		<link href="Stylesheets/article-3.css" rel="Stylesheet">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link href="../Stylesheets/reset.css" rel="stylesheet">
 		<link href="Stylesheets/common.css" rel="Stylesheet">
+		<link href="Stylesheets/article-3.css" rel="Stylesheet">
 		<link rel="Stylesheet" href="../Stylesheets/article-3.css">
 	</head>
 
