--- a/Pages/article-3.html
+++ b/Pages/article-3.html
@@ -4,16 +4,17 @@
 		<title>Article03</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+	
+		<!-- stylesheets -->
 		<link href="../Stylesheets/reset.css" rel="stylesheet">
-		<link href="Stylesheets/common.css" rel="Stylesheet">
-		<link href="Stylesheets/article-3.css" rel="Stylesheet">
-		<link rel="Stylesheet" href="../Stylesheets/article-3.css">
+		<link href="../Stylesheets/common.css" rel="stylesheet">
+		<link rel="stylesheet" href="../Stylesheets/article-3.css">
 	</head>
 
 <body>
 	<header>
 		<div class="header">
-			<span class="class-name">Type & Interaction</span>
+			<span class="class-name">T & I</span>
 			<span class="project">Article 03</span>
 			<span class="my-name">Vee Mai</span>
 		</div>
@@ -28,64 +29,57 @@
 		</nav>
 	</header>
 
-	<article>
-		<div class="article-info">
-			<div class="article-author">
-				<p id="written-by">Written by </p>
-				<p id="author-name"><a href="https://www.nicolefenton.com/">
-					Nicole Fenton</a></p>
-			</div>
+	<div class="grid"> 	
+		<!-- aside -->
+			<aside>
+				<div class="sticky-aside">
+					<div class="article-info">
+						<div class="article-author">
+							<h3 id="written-by">Written by </h3>
+							<h3 id="author-name"><a href="https://www.nicolefenton.com/">
+								Nicole Fenton</a></h3>
+						</div>
 
-			<div class="original-text">
-				<p id="duration">10 min read </p>
-				<p id="article-link">March 12,2015</p>
-			</div>
-		</div>
+						<div class="original-text">
+							<h3 id="duration">10 min read </h3>
+							<h3 id="article-link">March 12,2015</h3>
+						</div>
+					</div>
 
-		<aside>
-			<details>
-				<summary>Table of Contents</summary>
-					<ul>
-						<li><a href="#section1">How Design Works</a></li>
-					</ul>
-					<ul>
-						<li><a href="#section2">How communication works</a></li>
-					</ul>
-					<ul>
-						<li><a href="#section3">How writing fits in</a></li>
-					</ul>
-					<ul>
-						<li><a href="#section4">The gap between us</a></li>
-					</ul>
-						<li><a href="#section5">What are words for</a></li>
-					</ul>
-					</ul>
-						<li><a href="#section6">Understand and clarify the problem</a></li>
-					</ul>
-					</ul>
-					<li><a href="#section7">More people, more problems</a></li>
-					</ul>
-			</details>
-		</aside>
-		
-		<div class="intro">
-				<em>I gave this talk at RISD in Providence and UXLx in Lisbon. Thanks to Tim Maly and Bruno Figueiredo for inviting me to speak, and to Allen Tan, Tina Lee, and Max Fenton for their thoughtful feedback on drafts.</em>	
-		</div>
-		
-		<p>I want to start with a quote from writer, activist, and teacher, Thich Nhat Hanh. In Being Peace, he writes:</p>
-
-		<blockquote class="quotes">
-			<p> “If you are a poet, you will see clearly that there is a cloud floating in every sheet of paper. Without a cloud, there will be no rain; without rain, the trees cannot grow; and without trees, we cannot make paper. The cloud is essential for the paper to exist.”
-			</p>
-		</blockquote>
+					<div class="table_of_content">
+						<h4 id="content">Table of Contents
+							<h4><a href="#section1">How Design Works </a></h4>
+							<h4><a href="#section2">How communication works</a></h4>
+							<h4><a href="#section3">How writing fits in</a></h4>
+							<h4><a href="#section4">The gap between us</a></h4>
+							<h4><a href="#section5">What are words for</a></h4>
+							<h4><a href="#section6">Understand and clarify the problem</a></h4>
+							<h4><a href="#section7">More people, more problems</a></h4>
+						</h4>
+					</div>
+				</div>
+			</aside>
 	
-		<p>Thich Nhat Hanh calls this concept interbeing. He goes on to say that the sun is also in the sheet of paper; and the lumberjack who cut down the tree; and his parents; and the wheat that made his morning bread; and so on. All of these things make it possible for the paper to exist.</p>
+		<article>
+			<section>
+				<div class="intro">
+					<em>I gave this talk at RISD in Providence and UXLx in Lisbon. Thanks to Tim Maly and Bruno Figueiredo for inviting me to speak, and to Allen Tan, Tina Lee, and Max Fenton for their thoughtful feedback on drafts.</em>	
+				</div>
+		
+				<p>I want to start with a quote from writer, activist, and teacher, Thich Nhat Hanh. In Being Peace, he writes:</p>
 
-		<p>I bring up this story, because it helped me understand systems at a deeper level. I’ve been thinking a lot about what it takes to make a design project successful and even possible in the first place. I have a few hunches and I believe words play an important part in the process. But before I get to that, let’s look at how the paper metaphor relates to us as designers.</p>
+			<blockquote class="quotes">
+				<p> “If you are a poet, you will see clearly that there is a cloud floating in every sheet of paper. Without a cloud, there will be no rain; without rain, the trees cannot grow; and without trees, we cannot make paper. The cloud is essential for the paper to exist.”
+				</p>
+			</blockquote>
+	
+			<p>Thich Nhat Hanh calls this concept interbeing. He goes on to say that the sun is also in the sheet of paper; and the lumberjack who cut down the tree; and his parents; and the wheat that made his morning bread; and so on. All of these things make it possible for the paper to exist.</p>
 
-		<div class="sticky-header" id="section1">
-			<h2>How Design works </h2>
-		</div>
+			<p>I bring up this story, because it helped me understand systems at a deeper level. I’ve been thinking a lot about what it takes to make a design project successful and even possible in the first place. I have a few hunches and I believe words play an important part in the process. But before I get to that, let’s look at how the paper metaphor relates to us as designers.</p>
+
+			<div class="sticky-header" id="section1">
+				<h2>How Design works </h2>
+			</div>
 
 		<p>Our work depends on many things:<span class="hover-texts"> time, money, technology, materials, constraints,</span>  and most importantly,:<span class="hover-texts">the lives, attention, and experiences </span> of other people. We participate in and often orchestrate a process that’s bigger than we are. Design requires collaborators, contributors, customers, toolmakers, factory workers, marketers, postal workers, call center agents, you name it. If we look closely, we can see that people are at the heart of everything we make.
 		</p>
@@ -221,11 +215,15 @@
 
 		<p>I like this idea of writing as a way of figuring things out and exploring possibilities—and that willingness to experiment fits right in with design.</p>
 
-	</main>
+	</section>
+	</article>
+	</div>
 
+	<button id="button"> <a href="article-2.html"> Next article </a></button>
 
 	<footer>
-		<p>Designed by Vee Mai </p>
+		<p id="citation">Originally published in T Magazine © Michael Rock</p>
 	</footer>
-</body>
+	<!-- <a id="scroll-top" href="#">Top</a> -->
+	</body>
 </html>
